Fix profile about word-wrap

--- a/components/Profile.module.css
+++ b/components/Profile.module.css
@@ -45,3 +45,7 @@
 .name {
 	color: rgb(var(--foreground-secondary-rgb));
 }
+
+.about {
+	white-space: pre-wrap;
+}
